kubernetes-templates/srs-https-hostname-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: srs-ingress
  namespace: script-runtime-service
spec:
  tls:
  - hosts:
    - ${SRSA_HOSTNAME}
    secretName: srs-tls
  rules:
  - host: ${SRSA_HOSTNAME}
    http:
      paths:
      - path: /
        backend:
          serviceName: srs-apigateway
          servicePort: 5050
